--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3003
-MONGODB_URI=mongodb+srv://vanegasbravo4:jhoan@cluster0.kqtomi2.mongodb.net/Nose_penelope?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://@cluster0.kqtomi2.mongodb.net/Nose_penelope?retryWrites=true&w=majority&appName=Cluster0
